refactor(munki): keep package icon fallback in API
